--- a/static/game.html
+++ b/static/game.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Majsoul Electron</title>
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/game.css">
   <script type="module">
     let gameFrame = document.getElementById("game");
     gameFrame.src = window.electronAPI.url;
